test/tests/compiler/8_loops/valid/extra_credit/compound_assignment_controlling_expression.plx
pub fn main(none) i32 {
    i: i32 = 100
    sum: i32 = 0
    loop .. while i -= 1 {
        sum += 2
    }    
    return (i == false and sum == 200
        )
}
