test/tests/compiler/8_loops/invalid_parse/missing_for_header_clauses.plx
pub fn main(none) i32 {
    loop 2 + 2 == 4 while .. {
        ;
    }
    return 0
}
